--- a/package.json
+++ b/package.json
@@ -10,27 +10,36 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.2",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.12.6",
+    "@vee-validate/zod": "^4.14.4",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.6",
     "cookie-universal-nuxt": "^2.2.2",
     "firebase": "^10.9.0",
     "jose": "^5.2.3",
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
-    "vee-validate": "^4.12.6",
+    "quill": "^2.0.2",
+    "vee-validate": "^4.14.4",
     "vue": "^3.4.19",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "autoprefixer": "^10.4.18",
     "nuxt-icon": "^0.6.8",
     "nuxt-primevue": "^0.3.1",
     "postcss": "^8.4.35",
+    "sass": "^1.80.4",
     "tailwindcss": "^3.4.1"
   }
 }
